feat(spec-review): the 2026-08-26 seventh-pass cross-spec review — three Phase-4 pins close, one live defect found
Reviewing the implementation against the specs found four findings, all closed:

- PHASE-4 §7's `script` scheduler target had shipped dormant ("awaits the
  Script Engine's service execution context" — never revisited once the engine
  existed). Closed end to end: script jobs (params {entity, hook}, now
  save-validated like flow jobs) fire the runtime's scheduled-hook surface; the
  runtime executes a script hook recordless as the per-app system principal
  through a new ScriptClient.executeScheduled leg; the Script Engine grows
  POST /api/v1/scripts/scheduled (service-client gated) — $record absent, and
  $data.query rides a new systemQuery leg on the runtime's internal
  POST /api/v1/hooks/records/query (the standard list DSL under the system
  principal). ADR-003 amended with the one-surface note.
- The scheduled surface fired EVERY hook on the entity, not the addressed one —
  a scheduled job targeting one flow also fired its entity's script hooks
  (against §7's "addressed by name"). Found by the new suite's regression case;
  closed with HookExecutor.runScheduled (exactly the named hook, recordless),
  and scheduled-context failures propagate to the Scheduler's run row +
  scheduler.job.run event instead of parking unconvergeable spine retries.
- PHASE-4 §6's "SLA metrics (warn/breach counts per app) feed the Grafana
  baseline" existed only as an unlabeled breach counter. novaforge.sla.warn
  joins it, both labeled per app, and the NovaForge / Phase 4 board ships
  (warn/breach rates per app, totals, escalations, service p95 + lag).
- PHASE-4 §8's ${record.field} template tokens resolved nothing — the surface
  they waited on landed with §9's event-start read. TaskEventConsumer now
  fetches the record once per event (RuntimeRecordPort, best-effort — failure
  degrades to empty tokens, never blocks delivery) and Notifier.resolve binds
  both to